--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:tag="cards main container">
 
@@ -9,18 +10,15 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/colorWhite"
-        card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="5dp"
-        card_view:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/colorWhite"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_weight="2"
@@ -35,16 +33,57 @@
                     android:text="Task Title"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="12dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="12dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Type"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <TextView
+                        android:id="@+id/typeTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="12dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Timed"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                </LinearLayout>
+
                 <TextView
-                    android:layout_margin="12dp"
                     android:id="@+id/detailsTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_margin="8dp"
                     android:text="Task Details"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <com.skydoves.progressview.ProgressView
+                    android:layout_margin="8dp"
+                    android:id="@+id/progressView"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    app:progressView_autoAnimate="true"
+                    app:progressView_colorBackground="@color/colorWhite"
+                    app:progressView_max="100"
+                    app:progressView_min="0"
+                    app:progressView_padding="1dp"
+                    app:progressView_progress="40"
+                    app:progressView_progressFromPrevious="true"
+                    app:progressView_radius="6dp" />
             </LinearLayout>
-        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
