--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:tag="cards main container">
 
-    <androidx.cardview.widget.CardView xmlns:card_view="https://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,73 +17,73 @@
         app:cardUseCompatPadding="true">
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_weight="2"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/titleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="Task Title"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_weight="2"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:paddingTop="12dp">
 
                 <TextView
-                    android:id="@+id/titleTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:text="Task Title"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="12dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_margin="12dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Type"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                    <TextView
-                        android:id="@+id/typeTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_margin="12dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Timed"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/detailsTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="8dp"
-                    android:text="Task Details"
+                    android:layout_margin="12dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Type"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <com.skydoves.progressview.ProgressView
-                    android:layout_margin="8dp"
-                    android:id="@+id/progressView"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    app:progressView_autoAnimate="true"
-                    app:progressView_colorBackground="@color/colorWhite"
-                    app:progressView_max="100"
-                    app:progressView_min="0"
-                    app:progressView_padding="1dp"
-                    app:progressView_progress="40"
-                    app:progressView_progressFromPrevious="true"
-                    app:progressView_radius="6dp" />
+                <TextView
+                    android:id="@+id/typeTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="12dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Timed"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/detailsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="8dp"
+                android:text="Task Details"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <com.skydoves.progressview.ProgressView
+                android:id="@+id/progressView"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_margin="8dp"
+                app:progressView_autoAnimate="true"
+                app:progressView_colorBackground="@color/colorWhite"
+                app:progressView_max="100"
+                app:progressView_min="0"
+                app:progressView_padding="1dp"
+                app:progressView_progress="40"
+                app:progressView_progressFromPrevious="true"
+                app:progressView_radius="6dp" />
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
