--- a/app/src/main/res/layout/view_task_dialog.xml
+++ b/app/src/main/res/layout/view_task_dialog.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.shinelw.library.ColorArcProgressBar
+        android:id="@+id/circularProgressBar"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="150dp"
+        app:back_color="@android:color/darker_gray"
+        app:back_width="10dp"
+        app:front_color1="@color/colorAccent"
+        app:front_width="10dp"
+        app:is_need_content="true"
+        app:is_need_unit="true"
+        app:max_value="100"
+        app:string_unit="progress"
+        app:total_engle="360" />
+</LinearLayout>
