--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.lifeassistance.Activities.StepActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="28dp"
+        android:text="Add A NEW GOAL"
+        android:textColor="@color/colorPrimary"
+        android:textSize="35sp"
+        android:textStyle="bold" />
     <!-- new_user_form_activity.xml -->
     <ernestoyaquello.com.verticalstepperform.VerticalStepperFormView
         android:id="@+id/stepper_forms"
@@ -13,5 +23,5 @@
         android:layout_height="match_parent"
         app:form_circle_background_color="@color/colorPrimary"
         app:form_next_button_background_color="@color/colorPrimary"
-        app:form_next_button_pressed_background_color="@color/colorPrimaryDark"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:form_next_button_pressed_background_color="@color/colorPrimaryDark" />
+</LinearLayout>
