--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -25,12 +25,13 @@
             android:orientation="vertical">
 
             <TextView
-
                 android:id="@+id/titleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_margin="8dp"
                 android:layout_marginTop="10dp"
+                android:fontFamily="monospace"
                 android:text="Task Title"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -47,7 +48,7 @@
                     android:layout_marginStart="80dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Type"
+                    android:text="@string/type"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +84,7 @@
                     android:layout_marginStart="64dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Progress"
+                    android:text="@string/progress"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
