--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorPrimary">#660000</color>
+    <color name="colorPrimaryDark">#3c0000</color>
+    <color name="colorAccent">#9a362a</color>
 
     <color name="colorText">#FFFFFF</color>
     <color name="colorPrimaryText">#212121</color>
