--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#660000</color>
-    <color name="colorPrimaryDark">#3c0000</color>
-    <color name="colorAccent">#9a362a</color>
+    <color name="colorPrimary">#010101</color>
+    <color name="colorPrimaryDark">#010101</color>
+    <color name="colorAccent">#84142d</color>
 
     <color name="colorText">#FFFFFF</color>
     <color name="colorPrimaryText">#212121</color>
-    <color name="colorSecondaryText">#757575</color>
+    <color name="colorSecondaryText">#FFFFFF</color>
+
+    <color name="colorHintText">#757575</color>
+
+    <color name="colorBackground">#1b1b2f</color>
 
     <color name="colorDivider">#BDBDBD</color>
 
