--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/colorWhite"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true">
@@ -29,12 +29,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="8dp"
-                android:layout_marginTop="10dp"
+                android:layout_margin="16dp"
                 android:fontFamily="monospace"
                 android:text="Task Title"
                 android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/colorText" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -50,6 +50,7 @@
                     android:gravity="center"
                     android:text="@string/type"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/colorText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -65,6 +66,7 @@
                     android:gravity="center"
                     android:text="Timed"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/colorText"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +88,7 @@
                     android:gravity="center"
                     android:text="@string/progress"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/colorText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -101,6 +104,7 @@
                     android:gravity="center"
                     android:text="15/60"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/colorText"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -122,10 +126,11 @@
             <com.skydoves.progressview.ProgressView
                 android:id="@+id/progressView"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:layout_margin="8dp"
+                android:layout_height="18dp"
+                android:layout_margin="16dp"
                 app:progressView_autoAnimate="true"
                 app:progressView_colorBackground="@color/colorWhite"
+                app:progressView_labelSize="13sp"
                 app:progressView_min="0"
                 app:progressView_padding="1dp"
                 app:progressView_progressFromPrevious="true"
