--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -13,7 +14,7 @@
         android:layout_margin="32dp"
         android:text="This section is empty"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorText"
         android:textSize="26sp"
         android:visibility="gone" />
 
@@ -39,7 +40,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/fab_margin"
-            android:background="@color/colorWhite"
+            android:background="@color/colorBackground"
+            app:cnb_badgeColor="@color/colorAccent"
+            app:cnb_unselectedColor="@color/colorText"
             app:cnb_menuResource="@menu/menu_navigation" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
