--- a/app/src/main/res/layout/progressive_task.xml
+++ b/app/src/main/res/layout/progressive_task.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/colorWhite"
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
@@ -22,7 +22,7 @@
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:text="task 1"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorSecondaryText"
             android:textSize="18sp" />
 
         <CheckBox
