--- a/app/src/main/res/layout/view_task_dialog.xml
+++ b/app/src/main/res/layout/view_task_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
     <com.shinelw.library.ColorArcProgressBar
@@ -30,7 +31,8 @@
         android:text="15/10/2020"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
 
     <TextView
@@ -41,7 +43,7 @@
         android:layout_margin="8dp"
         android:fontFamily="casual"
         android:text="15/60"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorSecondaryText"
         android:textSize="18sp"
         android:textStyle="bold" />
 
