--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_margin="28dp"
         android:text="@string/add_a_new_goal"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorSecondaryText"
         android:textSize="35sp"
         android:textStyle="bold" />
     <!-- new_user_form_activity.xml -->
@@ -22,12 +22,11 @@
         android:id="@+id/stepper_forms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:form_bottom_navigation_background_color="@color/colorAccent"
+        app:form_bottom_navigation_background_color="@color/colorPrimaryDark"
         app:form_circle_background_color="@color/colorAccent"
         app:form_circle_text_color="@color/colorPrimary"
         app:form_next_button_background_color="@color/colorAccent"
         app:form_next_button_pressed_background_color="@color/colorPrimaryDark"
-        app:form_next_button_pressed_text_color="@color/colorAccent"
         app:form_next_button_text_color="@color/colorText"
         app:form_title_text_color="@color/colorText" />
 </LinearLayout>
