add repeated tasks support

--- a/app/src/main/res/layout/progressive_task.xml
+++ b/app/src/main/res/layout/progressive_task.xml
@@ -10,7 +10,7 @@
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -19,6 +19,7 @@
             android:id="@+id/milestoneTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:text="task 1"
@@ -29,6 +30,7 @@
             android:id="@+id/milestoneCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="8dp" />
 
     </LinearLayout>
